# bindpy

./: LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yaml  test.yaml
bindpy/: __init__.py  bind.py  placeholder.py
examples/: bind_back.py  bind_front.py
fbind/: __init__.py  bind.py  placeholder.py
tests/: __init__.py  bind_tests.py
